# Argus-demo

./: .env.example  .gitignore  README.md  app.py  cli.py  config.py  demo_data.py  gateway.py  guard_llm_handler.py  layer1_filters.py  primary_llm_mock.py  pyproject.toml  requirements.txt
docker/: Dockerfile  docker-compose.yml
docs/: STRUCTURE.md
examples/: basic_usage.py
scripts/: setup.py
src/: app.py  config.py  gateway.py  guard_llm_handler.py  layer1_filters.py
src/argus/: __init__.py
src/argus/config/: __init__.py  prompts.py  security_rules.py  settings.py
src/argus/core/: __init__.py  exceptions.py  gateway.py  types.py
src/argus/filters/: __init__.py  base.py
src/argus/filters/layer1/: __init__.py  input_filters.py  output_filters.py
src/argus/filters/layer2/: __init__.py  guard_llm.py
src/argus/interfaces/: __init__.py  cli.py
src/argus/llm/: __init__.py  base.py  mock_llm.py
src/argus/utils/: __init__.py  logging.py
tests/: conftest.py
tests/unit/: test_gateway.py  test_layer1_filters.py
